--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Load Tailwind CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" />
     <!-- Load Bootstrap icons CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   </head>
   <body class="bg-gray-900 text-white font-sans">
     <div class="h-screen flex justify-center items-center">
